--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     justify-content: space-between;
     min-height: 80px;
     align-items: center;
-    width: 1200px;
+    width: 1300px;
     margin: 0 auto;
 }
 .logos{
@@ -21,8 +21,125 @@ body{
 }
 .menus>ul{
     display: flex;
+    align-items: center;
 }
 .menus li{
     list-style: none;
     margin-right:50px ;
+    font-size: 20px;
+
+}
+.btn{
+    background-color: rgb(200, 197, 197);
+    padding: 15px 20px;
+    border: 0;
+    border-radius: 10px;
+}
+.banner-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1250px ;
+    margin: 0 auto;
+    
+
+}
+.banner-container h2{
+    font-size: 50px;
+    font-weight: 900;
+
+}
+.banner-container h1{
+    font-size: 100px;
+    color: #BB51D4;
+    font-weight:900;
+    
+}
+.img-container img{
+    width: 600px;
+}
+.s-btn{
+    padding: 15px;
+    font-weight: 400;
+    background-color: #FF42A5;
+    color: white;
+    font-size: 20px;
+    border: 0;
+    border-radius: 20px;
+    margin-top: 10px;
+}
+.g-btn{
+    padding: 15px;
+    font-weight: 400;
+    background-color: #4EC5F7;
+    color: white;
+    font-size: 20px;
+    border: 0;
+    border-radius: 20px;
+    margin-top: 10px;
+}
+.text-container p{
+    font-size: 20px;
+    padding: 5px;
+}
+.gamer-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1250px;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+.gamer-img img{
+    width: 700px;
+    align-items: flex-start;
+}
+.gamer-text{
+    text-align: right;
+}
+.gamer-header{
+    font-size: 40px;
+    color: #BB51D4;
+    font-weight: 900;
+font-size: 48px;
+font-weight: 700;
+}
+.gamer-description{
+    font-size: 15px;
+    padding-bottom: 10px;
+    width: 400px;
+    color: #534C64;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px; /* 166.667% */
+}
+.funny-container{
+    max-width: 1250px;
+    margin: 0 auto;
+    padding-top:50px ;
+}
+.funny-img{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+}
+.funny-header{
+    color: #0B0223;
+text-align: center;
+font-family: Work Sans;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.funny-description{
+    color: #534C64;
+text-align: center;
+font-family: Work Sans;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; /* 166.667% */
+padding-bottom:20px ;
 }
