--- a/style.css
+++ b/style.css
@@ -124,9 +124,31 @@ line-height: 30px; /* 166.667% */
     align-items: center;
     gap: 20px;
 }
+.image{
+      width: 300px;
+      position: relative;
+}
 .funny-img img{
-    width: 300px;
-    height: auto;
+     width: 100%;
+     display: block;
+     margin: auto;
+}
+.content{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    opacity: 0;
+    transition: 0.6s;
+}
+.content:hover{
+    opacity: 1;
 }
 .funny-header{
     color: #0B0223;
