--- a/style.css
+++ b/style.css
@@ -174,9 +174,7 @@ padding-bottom:20px ;
     justify-content: space-around;
     align-items: center;
     gap: 50px;
-    width: 1250px;
     margin: 0 auto;
-    
 }
 .play-header{
     text-align: right;
@@ -195,12 +193,12 @@ padding-bottom: 200px;
 width: 400px;
 }
 .play-up-img{
-    width: 548px;
+    width: 400px;
 }
 .play-down-img{
-    width: 283px;
+    width: 200px;
     position: relative;
-    top: -250px;
+    top: -150px;
     left: -100px;
 }
 .button-container{
@@ -228,6 +226,7 @@ width: 400px;
     border-radius: 40px;
     border: 0;
     margin: 20px;
+    padding: 10px;
   }
   .last-one{
     background-color: #0B0223;
@@ -277,4 +276,50 @@ font-weight: 500;
 text-align: center;
 font-size: 16px;
 font-weight: 500;
+  }
+  .image-button:hover{
+    border: 2px solid #FF42A5;
+  }
+  @media screen and (max-width:576px){
+    .nav-container{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+    .logos{
+        padding-bottom:20px ;
+    }
+    .menus li{
+          margin-right: 20px;
+    }
+    .banner-container{
+        
+        flex-direction: column-reverse;
+    }
+    .gamer-container{
+        flex-direction: column;
+    }
+    .gamer-img img{
+        width: 100%;
+    }
+    .img-container img{
+        width: 100%;
+    }
+    .gamer-text{
+        text-align: center;
+    }
+    .funny-img{
+        flex-direction: column;
+    }
+    .play-container{
+        flex-direction: column-reverse;
+    }
+    .play-img{
+        width: 80%;
+    }
+    .nav{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
   }
